--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -117,7 +117,7 @@
     </profiles>
     <dependencies>
         <dependency>
-            <groupId>com.wakaleo.gameoflife.domain</groupId>
+            <groupId>com.wakaleo.gameoflife</groupId>
             <artifactId>gameoflife-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
