--- a/gameoflife-core/pom.xml
+++ b/gameoflife-core/pom.xml
@@ -44,6 +44,7 @@
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
+                <dataFile>${basedir}/target/cobertura.ser</dataFile>
                     <formats>
                         <format>xml</format>
                         <format>html</format>
